--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
+    "framer-motion": "^11.0.3",
     "headlessui": "^0.0.0",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
